fix: remove unecessary backup step in playbooks and add backup entire root directory step

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -1,7 +1,11 @@
 
 ## Create a Separate `/var` Partition
 
-### 1. Preliminary Checks and Backup
+### Backup Entire Root Before Resizing
+
+Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
+
+### 1. Preliminary Checks
 
 #### a. Check Current `/var` Size on the Installed System
 Before resizing or creating a new partition, note how much space `/var` is currently using and plan a suitable new partition size (allowing some headroom for growth).
@@ -18,63 +22,15 @@ Before resizing or creating a new partition, note how much space `/var` is curre
 
 3. Based on these outputs, decide on a target size for the new `/var` partition. For example, if `/var` is currently 20 GiB, you might allocate 30 GiB or more, depending on expected growth.
 
-#### b. Backup Existing `/var` Data (Optional: from Installed System)
-
-It’s good practice to back up `/var` before partition changes. You can back up while booted normally or wait until the Live USB session. Examples below assume you have an external drive or network location mounted at `<BACKUP_DESTINATION>`.
-
-1. Ensure `<BACKUP_DESTINATION>` is accessible and has enough free space.
-2. Run:
-
-   ```bash
-   sudo rsync -avh --progress /var/ <BACKUP_DESTINATION>/var_backup_$(date +%F)/
-   ```
-3. Verify the backup:
-
-   ```bash
-   du -sh <BACKUP_DESTINATION>/var_backup_$(date +%F)/
-   ```
-
-   Ensure it matches or exceeds the size shown by `du -sh /var`.
-
-> **Tip:** If you prefer, you can also perform this backup in the Live USB environment after mounting the root partition (see next section).
-
 ---
 
-### 2. Boot Live USB and (Re-)Backup `/var` from Live Environment
+### 2. Boot Live USB
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
    * You cannot modify partitions on a mounted root in use by the running OS, so use a Live session.
 
-2. **(Optional) Mount the Ubuntu Root and Backup `/var`:**
-   If you did not back up already, you can back up now from Live:
-
-   * Identify your root partition (e.g., via `lsblk` or `sudo fdisk -l`)—we’ll refer to it as `<ROOT_PARTITION>` (e.g., `/dev/sdXN`).
-   * Mount it:
-
-     ```bash
-     sudo mkdir /mnt/ubuntu_root
-     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
-     ```
-   * Mount or ensure access to your backup destination (`<BACKUP_DESTINATION>`), e.g., an external USB drive might auto-mount under `/media/ubuntu/...`.
-   * Run:
-
-     ```bash
-     sudo rsync -avh --progress /mnt/ubuntu_root/var/ <BACKUP_DESTINATION>/var_backup_$(date +%F)/
-     ```
-   * Verify sizes:
-
-     ```bash
-     du -sh /mnt/ubuntu_root/var
-     du -sh <BACKUP_DESTINATION>/var_backup_$(date +%F)/
-     ```
-   * Once done, unmount if desired:
-
-     ```bash
-     sudo umount /mnt/ubuntu_root
-     ```
-
-3. **Launch GParted:**
+2. **Launch GParted:**
 
    * From the Live Ubuntu desktop, open **GParted** (search “GParted” in the applications menu).
 
