--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28507.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28507.md
@@ -1,7 +1,11 @@
 
 ## Create a Separate `/var/tmp` Partition
 
-### 1. Preliminary Checks and Backup
+### Backup Entire Root Before Resizing
+
+Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
+
+### 1. Preliminary Checks
 
 #### a. Check Current `/var/tmp` Size on the Installed System
 Before creating a new partition, see how much data is in `/var/tmp` and decide on an appropriate size (with some headroom).
@@ -18,56 +22,13 @@ Before creating a new partition, see how much data is in `/var/tmp` and decide o
 
 3. Based on these outputs, choose a target size for the new `/var/tmp` partition (e.g., if `/var/tmp` uses 2 GiB, you might allocate 5 GiB or more).
 
-#### b. Backup Existing `/var/tmp` Data (Optional: from Installed System or Live USB)
 
-It’s wise to back up `/var/tmp` before changes. You can back up now or later in the Live USB environment.
-
-* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
-
-  ```bash
-  sudo rsync -avh --progress /var/tmp/ <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
-  du -sh <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
-  ```
-* Or wait until Live USB: after mounting the installed root (see next section), run:
-
-  ```bash
-  sudo rsync -avh --progress /mnt/ubuntu_root/var/tmp/ <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
-  du -sh /mnt/ubuntu_root/var/tmp
-  du -sh <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
-  ```
-
-> **Tip:** Replace `<BACKUP_DESTINATION>` with your actual backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/path/`).
-
----
-
-### 2. Boot Live USB and (Re-)Backup `/var/tmp` from Live Environment
+### 2. Boot Live USB
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
    * Necessary because you can't modify mounted partitions of the running OS.
-2. **(Optional) Mount the Ubuntu Root and Backup `/var/tmp`:**
-
-   * Identify your root partition (e.g., via `lsblk` or `sudo fdisk -l`), refer to it as `<ROOT_PARTITION>`.
-   * Mount it:
-
-     ```bash
-     sudo mkdir -p /mnt/ubuntu_root
-     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
-     ```
-   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
-   * Back up:
-
-     ```bash
-     sudo rsync -avh --progress /mnt/ubuntu_root/var/tmp/ <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
-     du -sh /mnt/ubuntu_root/var/tmp
-     du -sh <BACKUP_DESTINATION>/vartmp_backup_$(date +%F)/
-     ```
-   * Unmount if desired:
-
-     ```bash
-     sudo umount /mnt/ubuntu_root
-     ```
-3. **Launch GParted:**
+2. **Launch GParted:**
 
    * From the Live desktop, open **GParted**.
 
