--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28511.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28511.md
@@ -1,6 +1,10 @@
 ## Create a Separate `/var/log` Partition
 
-### 1. Preliminary Checks and Backup
+### Backup Entire Root Before Resizing
+
+Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
+
+### 1. Preliminary Checks
 
 #### a. Check Current `/var/log` Size on the Installed System
 Before creating a new partition, check how much data is in `/var/log` and decide on an appropriate size (with some headroom).
@@ -17,56 +21,12 @@ Before creating a new partition, check how much data is in `/var/log` and decide
 
 3. Based on these outputs, choose a target size for the new `/var/log` partition (e.g., if logs use \~10 GiB, you might allocate 15–20 GiB or more).
 
-#### b. Backup Existing `/var/log` Data (Optional: from Installed System or Live USB)
-
-It’s prudent to back up `/var/log` before changes. You can back up now or later in the Live USB environment.
-
-* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
-
-  ```bash
-  sudo rsync -avh --progress /var/log/ <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
-  du -sh <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
-  ```
-* Or wait until Live USB: after mounting the Ubuntu root (see next section), run:
-
-  ```bash
-  sudo rsync -avh --progress /mnt/ubuntu_root/var/log/ <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
-  du -sh /mnt/ubuntu_root/var/log
-  du -sh <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
-  ```
-
-> **Tip:** Replace `<BACKUP_DESTINATION>` with your actual backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/path/`).
-
----
-
-### 2. Boot Live USB and (Re-)Backup `/var/log` from Live Environment
+### 2. Boot Live USB
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
    * Required because you cannot modify partitions mounted by the running OS.
-2. **(Optional) Mount the Ubuntu Root and Backup `/var/log`:**
-
-   * Identify your root partition (e.g., via `lsblk` or `sudo fdisk -l`), referred to as `<ROOT_PARTITION>`.
-   * Mount it:
-
-     ```bash
-     sudo mkdir -p /mnt/ubuntu_root
-     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
-     ```
-   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
-   * Back up:
-
-     ```bash
-     sudo rsync -avh --progress /mnt/ubuntu_root/var/log/ <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
-     du -sh /mnt/ubuntu_root/var/log
-     du -sh <BACKUP_DESTINATION>/varlog_backup_$(date +%F)/
-     ```
-   * Unmount if desired:
-
-     ```bash
-     sudo umount /mnt/ubuntu_root
-     ```
-3. **Launch GParted:**
+2. **Launch GParted:**
 
    * From the Live desktop, open **GParted**.
 
