--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28515.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28515.md
@@ -1,6 +1,10 @@
 ## Create a Separate `/var/log/audit` Partition
 
-### 1. Preliminary Checks and Backup
+### Backup Entire Root Before Resizing
+
+Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
+
+### 1. Preliminary Checks
 
 #### a. Check Current `/var/log/audit` Size on the Installed System
 Before creating a new partition, check how much data is in `/var/log/audit` and choose an appropriate size (with headroom for growth).
@@ -17,56 +21,12 @@ Before creating a new partition, check how much data is in `/var/log/audit` and 
 
 3. Based on these outputs, decide on a target size for the new `/var/log/audit` partition (e.g., if audit logs use \~3 GiB, you might allocate 5 GiB or more).
 
-#### b. Backup Existing `/var/log/audit` Data (Optional: from Installed System or Live USB)
-
-Back up `/var/log/audit` before making changes. You can back up now or later from the Live USB.
-
-* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
-
-  ```bash
-  sudo rsync -avh --progress /var/log/audit/ <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
-  du -sh <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
-  ```
-* Or in Live USB after mounting your root (see next section), run:
-
-  ```bash
-  sudo rsync -avh --progress /mnt/ubuntu_root/var/log/audit/ <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
-  du -sh /mnt/ubuntu_root/var/log/audit
-  du -sh <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
-  ```
-
-> **Tip:** Replace `<BACKUP_DESTINATION>` with your real backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups`).
-
----
-
-### 2. Boot Live USB and (Re-)Backup `/var/log/audit` from Live Environment
+### 2. Boot Live USB 
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
    * Required because you cannot modify partitions mounted by the running OS.
-2. **(Optional) Mount the Ubuntu Root and Backup `/var/log/audit`:**
-
-   * Identify your root partition via `lsblk` or `sudo fdisk -l`; call it `<ROOT_PARTITION>`.
-   * Mount it:
-
-     ```bash
-     sudo mkdir -p /mnt/ubuntu_root
-     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
-     ```
-   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
-   * Back up:
-
-     ```bash
-     sudo rsync -avh --progress /mnt/ubuntu_root/var/log/audit/ <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
-     du -sh /mnt/ubuntu_root/var/log/audit
-     du -sh <BACKUP_DESTINATION>/varlogaudit_backup_$(date +%F)/
-     ```
-   * Unmount if desired:
-
-     ```bash
-     sudo umount /mnt/ubuntu_root
-     ```
-3. **Launch GParted:**
+2. **Launch GParted:**
 
    * From the Live desktop, open **GParted**.
 
