--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28519.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28519.md
@@ -1,6 +1,9 @@
 ## Create a Separate `/home` Partition
+### Backup Entire Root Before Resizing
 
-### 1. Preliminary Checks and Backup
+Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
+
+### 1. Preliminary Checks
 
 #### a. Check Current `/home` Size on the Installed System
 Before creating a new `/home` partition, check how much data is in `/home` and choose an appropriate size.
@@ -16,57 +19,14 @@ Before creating a new `/home` partition, check how much data is in `/home` and c
 * `df -h /home` shows filesystem usage and free space.
 
 3. Based on these outputs, decide how much space to allocate for `/home` (e.g., if current data is 100 GiB, you might allocate 250 GiB or more depending on future needs).
-
-#### b. Backup Existing `/home` Data
-
-Back up `/home` before making partition changes. You can back up now or later in Live USB.
-
-* If backing up now (while booted normally), ensure `<BACKUP_DESTINATION>` is accessible:
-
-  ```bash
-  sudo rsync -avh --progress /home/ <BACKUP_DESTINATION>/home_backup_$(date +%F)/
-  du -sh <BACKUP_DESTINATION>/home_backup_$(date +%F)/
-  ```
-* Or in Live USB after mounting root (see next section):
-
-  ```bash
-  sudo rsync -avh --progress /mnt/ubuntu_root/home/ <BACKUP_DESTINATION>/home_backup_$(date +%F)/
-  du -sh /mnt/ubuntu_root/home
-  du -sh <BACKUP_DESTINATION>/home_backup_$(date +%F)/
-  ```
-
-> **Tip:** Replace `<BACKUP_DESTINATION>` with your actual backup path (e.g., `/media/ubuntu/BackupDrive` or `user@server:/backups/home`).
-
 ---
 
-### 2. Boot Live USB and (Re-)Backup `/home` from Live Environment
+### 2. Boot Live USB
 
 1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
    * Necessary because you cannot modify mounted root partitions.
-2. **(Optional) Mount the Ubuntu Root and Backup `/home`:**
-
-   * Identify your root partition via `lsblk` or `sudo fdisk -l`; call it `<ROOT_PARTITION>`.
-   * Mount it:
-
-     ```bash
-     sudo mkdir -p /mnt/ubuntu_root
-     sudo mount /dev/<ROOT_PARTITION> /mnt/ubuntu_root
-     ```
-   * Ensure `<BACKUP_DESTINATION>` is available/mounted.
-   * Back up:
-
-     ```bash
-     sudo rsync -avh --progress /mnt/ubuntu_root/home/ <BACKUP_DESTINATION>/home_backup_$(date +%F)/
-     du -sh /mnt/ubuntu_root/home
-     du -sh <BACKUP_DESTINATION>/home_backup_$(date +%F)/
-     ```
-   * Unmount if desired:
-
-     ```bash
-     sudo umount /mnt/ubuntu_root
-     ```
-3. **Launch GParted:**
+2. **Launch GParted:**
 
    * From the Live desktop, open **GParted**.
 
