fix: Improve Documentation for Ubuntu 22.04 CAS playbooks

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -1,7 +1,7 @@
 
 ## Create a Separate `/var` Partition
 
-### Backup Entire Root Before Resizing
+### (Optional) Backup Entire Root Before Resizing
 
 Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
 
@@ -97,8 +97,8 @@ Before resizing or creating a new partition, note how much space `/var` is curre
    * After copying, verify sizes:
 
      ```bash
-     du -sh /mnt/ubuntu_root/var
-     du -sh /mnt/new_var
+     sudo du -sh /mnt/ubuntu_root/var
+     sudo du -sh /mnt/new_var
      ```
    * Ensure the copied data size matches or is very close.
 
@@ -121,12 +121,12 @@ Before resizing or creating a new partition, note how much space `/var` is curre
      * **UUID entry** (more robust if device names change):
 
        ```
-       UUID=<UUID_OF_NEW_VAR>    /var    ext4    defaults,nosuid,nodev    0   2
+       UUID=<UUID_OF_NEW_VAR>    /var    ext4    defaults,nosuid,nodev    0   0
        ```
      * **Direct device path** (simpler but may break if disk order/naming changes):
 
        ```
-       /dev/<NEW_VAR_PARTITION>    /var    ext4    defaults,nosuid,nodev    0   2
+       /dev/<NEW_VAR_PARTITION>    /var    ext4    defaults,nosuid,nodev    0   0
        ```
    * **Reasoning**:
 
