--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28519.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28519.md
@@ -1,5 +1,5 @@
 ## Create a Separate `/home` Partition
-### Backup Entire Root Before Resizing
+### (Optional) Backup Entire Root Before Resizing
 
 Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
 
@@ -39,7 +39,7 @@ Before creating a new `/home` partition, check how much data is in `/home` and c
 1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
 2. If you need to free space for `/home`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
 3. Free the desired amount (e.g., remaining free space or \~250 GiB). In **Free Space Following (MiB)**, enter the size in MiB (e.g., `256000` for \~250 GiB).
-4. Click **Resize/Move**, then Apply All Operations.
+4. Click **Resize/Move**, then Apply All Operations (green checkmark).
 
 #### b. Create New Partition for `/home`
 
@@ -88,8 +88,8 @@ Before creating a new `/home` partition, check how much data is in `/home` and c
    * Verify sizes:
 
      ```bash
-     du -sh /mnt/ubuntu_root/home
-     du -sh /mnt/new_home
+     sudo du -sh /mnt/ubuntu_root/home
+     sudo du -sh /mnt/new_home
      ```
    * Ensure data matches or is very close.
 
@@ -112,12 +112,12 @@ Before creating a new `/home` partition, check how much data is in `/home` and c
      * **UUID entry** (robust if device names change):
 
        ```
-       UUID=<UUID_OF_NEW_HOME>    /home    ext4    defaults,nosuid,nodev    0   2
+       UUID=<UUID_OF_NEW_HOME>    /home    ext4    defaults,nosuid,nodev    0   0
        ```
      * **Direct device path** (simpler but may break if naming shifts):
 
        ```
-       /dev/<NEW_HOME_PARTITION>    /home    ext4    defaults,nosuid,nodev    0   2
+       /dev/<NEW_HOME_PARTITION>    /home    ext4    defaults,nosuid,nodev    0   0
        ```
    * **Reasoning**:
 
