--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28507.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28507.md
@@ -1,7 +1,7 @@
 
 ## Create a Separate `/var/tmp` Partition
 
-### Backup Entire Root Before Resizing
+### (Optional) Backup Entire Root Before Resizing
 
 Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
 
@@ -41,7 +41,7 @@ Before creating a new partition, see how much data is in `/var/tmp` and decide o
 1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
 2. If you haven’t already freed space for `/var/tmp`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
 3. Free at least the size you planned (e.g., 5120 MiB for \~5 GiB). In **Free Space Following (MiB)** enter that value.
-4. Click **Resize/Move**, then Apply All Operations.
+4. Click **Resize/Move**, then Apply All Operations. (Green checkmark)
 
 #### b. Create New Partition for `/var/tmp`
 
@@ -90,8 +90,8 @@ Before creating a new partition, see how much data is in `/var/tmp` and decide o
    * Verify sizes:
 
      ```bash
-     du -sh /mnt/ubuntu_root/var/tmp
-     du -sh /mnt/new_vartmp
+     sudo du -sh /mnt/ubuntu_root/var/tmp
+     sudo du -sh /mnt/new_vartmp
      ```
    * Ensure data matches or is very close.
 
@@ -114,12 +114,12 @@ Before creating a new partition, see how much data is in `/var/tmp` and decide o
      * **UUID entry** (robust if device names change):
 
        ```
-       UUID=<UUID_OF_NEW_VARTMP>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   2
+       UUID=<UUID_OF_NEW_VARTMP>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   0
        ```
      * **Direct device path** (simpler but may break if naming shifts):
 
        ```
-       /dev/<NEW_VARTMP_PARTITION>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   2
+       /dev/<NEW_VARTMP_PARTITION>    /var/tmp    ext4    defaults,nosuid,nodev,noexec    0   0
        ```
    * **Reasoning**:
 
