--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28515.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28515.md
@@ -1,6 +1,6 @@
 ## Create a Separate `/var/log/audit` Partition
 
-### Backup Entire Root Before Resizing
+### (Optional) Backup Entire Root Before Resizing
 
 Before shrinking or resizing the root partition, it’s prudent to back up the entire root filesystem so you can restore if something goes wrong. Use your preferred method (disk image, filesystem snapshot, or rsync).
 
@@ -39,7 +39,7 @@ Before creating a new partition, check how much data is in `/var/log/audit` and 
 1. In GParted, locate your Ubuntu root partition (`<ROOT_PARTITION>`).
 2. If you haven’t already freed space for `/var/log/audit`, right-click `<ROOT_PARTITION>` → **Resize/Move**.
 3. Free at least the size you planned (e.g., 5120 MiB for \~5 GiB). Enter that in **Free Space Following (MiB)**.
-4. Click **Resize/Move**, then Apply All Operations.
+4. Click **Resize/Move**, then Apply All Operations (green checkmark).
 
 #### b. Create New Partition for `/var/log/audit`
 
@@ -88,8 +88,8 @@ Before creating a new partition, check how much data is in `/var/log/audit` and 
    * Verify sizes:
 
      ```bash
-     du -sh /mnt/ubuntu_root/var/log/audit
-     du -sh /mnt/new_varlogaudit
+     sudo du -sh /mnt/ubuntu_root/var/log/audit
+     sudo du -sh /mnt/new_varlogaudit
      ```
    * Ensure data matches or is very close.
 
@@ -112,12 +112,12 @@ Before creating a new partition, check how much data is in `/var/log/audit` and 
      * **UUID entry** (robust if device names change):
 
        ```
-       UUID=<UUID_OF_NEW_VARLOGAUDIT>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   2
+       UUID=<UUID_OF_NEW_VARLOGAUDIT>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   0
        ```
      * **Direct device path** (simpler but may break if naming shifts):
 
        ```
-       /dev/<NEW_VARLOGAUDIT_PARTITION>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   2
+       /dev/<NEW_VARLOGAUDIT_PARTITION>    /var/log/audit    ext4    defaults,nosuid,nodev,noexec    0   0
        ```
    * **Reasoning**:
 
