fix: remove option if config exists in /etc/fstab

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28523.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28523.md
@@ -19,16 +19,9 @@ findmnt --kernel /dev/shm
 sudo nano /etc/fstab
 ```
 
-**If an entry exists:**  
-Locate the `/dev/shm` line and ensure it includes all three options:
-```
-tmpfs /dev/shm tmpfs rw,nosuid,nodev,noexec,relatime 0 0
-```
-
-**If no entry exists:**  
 Add this line at the end:
 ```
-tmpfs /dev/shm tmpfs defaults,nosuid,nodev,noexec 0 0
+tmpfs /dev/shm tmpfs defaults,noexec,nodev,nosuid,rw,relatime 0 0
 ```
 
 💡 **nano tips:**
