doc: add deployment details for Wazuh security incident management system upgrade to v4.12

--- a/Patch Management/Releases/2025-06-23.md
+++ b/Patch Management/Releases/2025-06-23.md
@@ -4,7 +4,7 @@
 
 ## 📌 Summary
 
-Deployment of Wazuh security incident management system upgrade including new incident event management capabilities, platform upgrade to v4.12, and additional false positive rules to reduce noise in alerts.
+Deployment of Wazuh security incident management system upgrade including new incident **event management capabilities**, **platform upgrade to v4.12**, and **additional false positive rules** to reduce noise in alerts.
 
 ---
 
@@ -15,9 +15,9 @@ Deployment of Wazuh security incident management system upgrade including new in
   - [https://github.com/ADORSYS-GIS/wazuh/issues/220] Upgrade Wazuh platform to v4.12
   - [https://github.com/ADORSYS-GIS/wazuh-helm/issues/23] Add false positive rules to reduce alert noise
 
-- Code Repository: [https://github.com/orgs/ADORSYS-GIS/projects/10/views/1]
+
 - Related Commits / Merge Requests:
-  - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/14bc435c00848ac52cd2b1d389b9dc5cd82af3eb] Incident management configuration
+  - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/3286e074562d64d73db92e0c25d40a1be2d8e5fa] Incident management configuration
   - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/14bc435c00848ac52cd2b1d389b9dc5cd82af3eb] Wazuh v4.12 upgrade scripts
   - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/b77b7497d893c489f800f98ac30fd2e93c9b8e2f] False positive ruleset
 ---
@@ -29,7 +29,6 @@ Deployment of Wazuh security incident management system upgrade including new in
   - Wazuh Manager
   - Wazuh Indexer
   - Wazuh Dashboard
-  - Security Monitoring API
 
 - **Environment URLs:**
   - Dev: https://dev.wazuh.adorsys.team/app/wz-home#/overview/?_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h,to:now))&_a=(filters:!(),query:(language:kuery,query:''))
@@ -41,10 +40,9 @@ Deployment of Wazuh security incident management system upgrade including new in
 ## 🧪 Pre-Deployment Checklist
 
 - [ ] Code reviewed and approved
-- [ ] All tests passed (unit, integration, e2e)
+- [ ] All tests passed (unit, e2e)
 - [ ] Manual QA passed on staging
 - [ ] Infrastructure changes tested
-- [ ] Security scans passed (e.g. Snyk, Trivy)
 - [ ] Cost impact validated (if applicable)
 - [ ] Downtime expected? If yes, stakeholders informed
 
@@ -52,19 +50,16 @@ Deployment of Wazuh security incident management system upgrade including new in
 
 ## 📅 Deployment Plan
 
-1. Trigger CI/CD deployment pipeline: [link]
-2. Apply Terraform changes (if any)
-3. Run DB migrations (if needed)
-4. Enable feature flags (if applicable)
-5. Perform smoke test on production
-6. Validate system health via dashboards and logs
+1. Backup the prod cluster
+2. Trigger CI/CD deployment pipeline
+3. Perform test on the cluster
+4. Validate the health of the cluster
 
 ---
 
 ## 🧯 Rollback Plan
 
-- Revert to last stable deployment
-- Rollback Terraform (if infra changed)
+- Revert to last stable deployment.
 - Restore previous ruleset configuration
 - Disable feature flags
 - Notify stakeholders
