doc: update deployment details for Wazuh security incident management system upgrade to v4.12

--- a/Patch Management/Releases/2025-06-23.md
+++ b/Patch Management/Releases/2025-06-23.md
@@ -4,7 +4,7 @@
 
 ## 📌 Summary
 
-Deployment of Wazuh security incident management system upgrade including new incident **event management capabilities**, **platform upgrade to v4.12**, and **additional false positive rules** to reduce noise in alerts.
+Deployment of Wazuh security incident management system, including new **event management capabilities**, **a platform upgrade to v4.12**, and **additional false positive rules** to reduce noise in alerts.
 
 ---
 
@@ -29,6 +29,7 @@ Deployment of Wazuh security incident management system upgrade including new in
   - Wazuh Manager
   - Wazuh Indexer
   - Wazuh Dashboard
+  - wazuh agents 
 
 - **Environment URLs:**
   - Dev: https://dev.wazuh.adorsys.team/app/wz-home#/overview/?_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h,to:now))&_a=(filters:!(),query:(language:kuery,query:''))
@@ -44,7 +45,7 @@ Deployment of Wazuh security incident management system upgrade including new in
 - [ ] Manual QA passed on staging
 - [ ] Infrastructure changes tested
 - [ ] Cost impact validated (if applicable)
-- [ ] Downtime expected? If yes, stakeholders informed
+- [ ] Downtime expected? yes, For about 8-12 minutes (stakeholders informed). 
 
 ---
 
@@ -60,8 +61,7 @@ Deployment of Wazuh security incident management system upgrade including new in
 ## 🧯 Rollback Plan
 
 - Revert to last stable deployment.
-- Restore previous ruleset configuration
-- Disable feature flags
+- Restore previous backup
 - Notify stakeholders
 - Time estimate for rollback: _e.g., 15 minutes_
 
@@ -69,17 +69,15 @@ Deployment of Wazuh security incident management system upgrade including new in
 
 ## 👥 Stakeholders & Notifications
 
-- **Dev Contact:** @dev-username
-- **QA Contact:** @qa-username
-- **Product Owner:** @product-owner
-- **Security Team:** @security-ops
-- **Slack Channel Notification:** #prod-deploys
+- **Dev Contact:** @ArmandMeppa
+- **Product Owner:** @yannicksiewe , @francis-pouatcha
+- **Slack Channel Notification:** #Wazuh-team
 
 ---
 
 ## 🕐 Deployment Window
 
-- **Scheduled Date & Time:** 2025-06-23 @ 13:00 (UTC)
+- **Scheduled Date & Time:** 2025-06-23 @ 11:00am (UTC+1)
 - **Approved by:** 
 
 ---
