doc: update deployment documentation for Wazuh v4.12, refine pre-deployment checklist, and clarify rollback plan

--- a/Patch Management/Releases/2025-06-23.md
+++ b/Patch Management/Releases/2025-06-23.md
@@ -19,7 +19,7 @@ Deployment of Wazuh security incident management system, including new **event m
 - Related Commits / Merge Requests:
   - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/3286e074562d64d73db92e0c25d40a1be2d8e5fa] Incident management configuration
   - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/14bc435c00848ac52cd2b1d389b9dc5cd82af3eb] Wazuh v4.12 upgrade scripts
-  - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/b77b7497d893c489f800f98ac30fd2e93c9b8e2f] False positive ruleset
+  - [https://github.com/ADORSYS-GIS/wazuh-helm/commit/b77b7497d893c489f800f98ac30fd2e93c9b8e2f] False positive ruleset 
 ---
 
 ## 🗂️ Environment
@@ -32,37 +32,36 @@ Deployment of Wazuh security incident management system, including new **event m
   - wazuh agents 
 
 - **Environment URLs:**
-  - Dev: https://dev.wazuh.adorsys.team/app/wz-home#/overview/?_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h,to:now))&_a=(filters:!(),query:(language:kuery,query:''))
+  - [Dev Wazuh Cluster](https://dev.wazuh.adorsys.team/)
 
-  - Production: https://wazuh.adorsys.team/app/wz-home#/overview/?agentId=069&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-24h,to:now))&_a=(filters:!(),query:(language:kuery,query:''))
+  - [Prod Wazuh Cluster](https://wazuh.adorsys.team/)
 
 ---
 
 ## 🧪 Pre-Deployment Checklist
 
 - [ ] Code reviewed and approved
-- [ ] All tests passed (unit, e2e)
-- [ ] Manual QA passed on staging
-- [ ] Infrastructure changes tested
-- [ ] Cost impact validated (if applicable)
-- [ ] Downtime expected? yes, For about 8-12 minutes (stakeholders informed). 
+- [ ] Infrastructure changes tested `Dev Wazuh Cluster`
+- [ ] Downtime expected? **yes, For about 8-12 minutes**, due to the download of new container images of core wazuh components. 
+
+**Remark:** During `Pre-Deployment` checks, we noticed that the [False positive ruleset](https://github.com/ADORSYS-GIS/wazuh-helm/commit/b77b7497d893c489f800f98ac30fd2e93c9b8e2f) wasn't working and its changes were removed from the release
 
 ---
 
 ## 📅 Deployment Plan
 
 1. Backup the prod cluster
-2. Trigger CI/CD deployment pipeline
-3. Perform test on the cluster
-4. Validate the health of the cluster
+2. Trigger CI/CD deployment pipeline ( By updating the `targetVersion` of wazuh in **ArgoCD** configurations )
+3. Validate the health of the cluster
+4. Perform tests on the cluster
 
 ---
 
-## 🧯 Rollback Plan
+## 🧯 Rollback Plan (If Process Goes Astray)
 
 - Revert to last stable deployment.
 - Notify stakeholders
-- Time estimate for rollback: _e.g., 15 minutes_
+- Time estimate for rollback: **20-30 minutes**
 
 ---
 
@@ -70,14 +69,14 @@ Deployment of Wazuh security incident management system, including new **event m
 
 - **Dev Contact:** @ArmandMeppa
 - **Product Owner:** @yannicksiewe , @francis-pouatcha
-- **Slack Channel Notification:** #Wazuh-team
+- **Slack Channel Notification:** #wazuh-team
 
 ---
 
 ## 🕐 Deployment Window
 
 - **Scheduled Date & Time:** 2025-06-23 @ 11:00am (UTC+1)
-- **Approved by:** 
+- **Approved by:** **Project team**
 
 ---
 
@@ -87,9 +86,7 @@ Deployment of Wazuh security incident management system, including new **event m
 
 - [ ] Incident events being properly logged
 
-- [ ] Version 4.12 confirmed on all components
-
-- [ ] False positive rules reducing alert volume as expected
+- [ ] Version 4.12.0 confirmed on all components (Dashboard, Manager and Indexer)
 
 - [ ] Security dashboards show normal behavior
 
