doc: update Auditd integration documentation with revised group names and added configuration for MacOS and Windows agents

--- a/Patch Management/Releases/2025-07-21.md
+++ b/Patch Management/Releases/2025-07-21.md
@@ -26,15 +26,10 @@ Deployment of a comprehensive monitoring and alerting system for the Wazuh clust
   - Wazuh Manager
   - Wazuh Indexer
   - Wazuh Dashboard
-  - Prometheus
-  - Alertmanager
-  - Grafana
 
 - **Environment URLs:**
   - [Dev Wazuh Cluster](https://dev.wazuh.adorsys.team/)
   - [Prod Wazuh Cluster](https://wazuh.adorsys.team/)
-  - [Dev Grafana]()
-  - [Prod Grafana]()
 
 ---
 
@@ -48,12 +43,13 @@ Deployment of a comprehensive monitoring and alerting system for the Wazuh clust
 
 ## 📅 Deployment Plan
 
-1. Deploy Prometheus and Alertmanager stack via Helm chart.
-2. Apply configurations to monitor Wazuh cluster components (Manager, Indexer).
-3. Deploy Grafana and configure the Prometheus data source.
-4. Import and customize Grafana dashboards for key Wazuh metrics.
-5. Configure Alertmanager to send notifications to the `#wazuh-team` Slack channel.
-6. Validate that metrics are being collected and alerts are firing correctly in the dev environment.
+1. Backup the prod cluster
+2. Deploy Prometheus and Alertmanager stack via Helm chart.
+3. Apply configurations to monitor Wazuh cluster components (Manager, Indexer).
+4. Deploy Grafana and configure the Prometheus data source.
+5. Import and customize Grafana dashboards for key Wazuh metrics.
+6. Configure Alertmanager to send notifications to the `#wazuh-team` Slack channel.
+7. Validate that metrics are being collected and alerts are firing correctly in the dev environment.
 
 ---
 
@@ -84,6 +80,6 @@ Deployment of a comprehensive monitoring and alerting system for the Wazuh clust
 
 - [ ] Prometheus targets are all 'UP' in the service discovery UI.
 - [ ] Grafana dashboards are populated with data from Wazuh components.
-- [ ] Test alerts are successfully sent to the `#wazuh-team` Slack channel.
+- [ ] Test alerts are successfully sent to the `#wazuh-prod-alert` Slack channel.
 - [ ] No negative impact on Wazuh cluster performance is observed.
 - [ ] Confirmation sent to stakeholders.
